# bookstore

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: test_serializers.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
